tests/snapshots/examples_fixtures/type_system__failing__96_hm_fun_param_mismatch_contextual.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/96_hm_fun_param_mismatch_contextual.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/96_hm_fun_param_mismatch_contextual.flx:46:14
   |
46 |     let _f = if true {
   |              ^^^^^^^^^
47 |         takes_int
   | ^^^^^^^^^^^^^^^^^
   |         --------- this branch established the expected type
48 |     } else {
   | ^^^^^^^^^^^^
49 |         takes_string
   | ^^^^^^^^^^^^^^^^^^^^
   |         ------------ this branch conflicts with that type
50 |     }
   | ^^^^^

Note:
  expected parameter type: Int
  found parameter type: String
  the `then` branch fixes the type expected from the whole `if`
  the `else` branch produces the competing type

Help:
  Change parameter 1 to use `Int` consistently.
== stdout ==
<not executed>
